--- a/.github/workflows/no_oggy_test.yml
+++ b/.github/workflows/no_oggy_test.yml
@@ -18,4 +18,6 @@ jobs:
         run: |
            cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\"
            .\MSBuild.exe $Env:GITHUB_WORKSPACE\no_oggy.csproj
-      
+      - name: Verify string-removal from list
+        run: D:\a\remove_oggy\remove_oggy\no_oggy.exe
+
